# DejaView

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  DejaView_zh_CN.ts  main.cpp
include/: ImageHasher.h  tools.h
src/: ImageHasher.cpp  tools.cpp
test/: demo.cpp
ui/: mainwindow.ui
